# magnetic_locator

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
launch/: sim_launch.py
magnetic_interfaces/: CMakeLists.txt  package.xml
magnetic_interfaces/msg/: SensorArrayData.msg
magnetic_localization_DV25/: .gitignore  readme.md
magnetic_localization_DV25/scripts/: evaluate_bag.py  generate_architecture_png.py  generate_lut.py
magnetic_localization_DV25/src/magnetic_localization_dv25/: CMakeLists.txt  package.xml
magnetic_localization_DV25/src/magnetic_localization_dv25/config/: default_params.yaml  fastdds_shm_profile.xml  magnetic_map.yaml
magnetic_localization_DV25/src/magnetic_localization_dv25/include/magnetic_localization_dv25/: magnetic_field_lut.hpp  magnetic_field_model.hpp  magnetic_localization_node.hpp  magnetic_map.hpp
magnetic_localization_DV25/src/magnetic_localization_dv25/launch/: magnetic_localization.launch.py
magnetic_localization_DV25/src/magnetic_localization_dv25/src/: magnetic_field_lut.cpp  magnetic_field_model.cpp  magnetic_localization_component.cpp  magnetic_map.cpp  main.cpp
magnetic_localization_DV25/src/magnetic_localization_dv25/test/: test_magnetic_localization.cpp
magnetic_localization_DV25/src/magnetic_localization_dv25_interfaces/: CMakeLists.txt  package.xml
magnetic_localization_DV25/src/magnetic_localization_dv25_interfaces/msg/: AlgorithmStatus.msg  MagSensorMsg.msg  MagneticPose.msg
magnetic_localization_DV25/src/magnetic_localization_dv25_interfaces/srv/: InitializePose.srv
magnetic_locator/: kalman_filter.py  localization_node.py  localization_solver.py  magnet_mover.py  magnetic_math.py  plot_trajectory.py  sensor_simulator.py  set_pose.py  test_algorithm_bml.py  test_algorithm_tml.py  trajectory_publisher.py
urdf/: magnet.urdf  sensor_array.urdf
world/: empty.world
