<?xml version="1.0"?>
<package format="3">
  <name>magnetic_localization_dv25_interfaces</name>
  <version>0.1.0</version>
  <description>Messages and services for DV25 magnetic localization.</description>
  <maintainer email="todo@example.com">todo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
